objects/Contact.object
<CustomObject>
    <fields>
        <fullName>URL_ID__c</fullName>
        <description>IT is used to store encrypted contact id</description>
        <label>URL ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Date__c</fullName>
        <label>Unsubscribe Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verbal_Paired_Associates__c</fullName>
        <label>Verbal Paired Associates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOMENS_HEALTH__c</fullName>
        <label>WOMENS HEALTH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProject2_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProject2 Participant</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>